--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vyuldashev/nova-permission",
+    "name": "stickeeuk/nova-permission",
     "description": "A Laravel Nova tool for Spatie's Permission library.",
     "keywords": [
         "laravel",
@@ -10,7 +10,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "laravel/nova": "^4.0",
-        "spatie/laravel-permission": "^3.0|^4.0|^5.0"
+        "spatie/laravel-permission": "^3.0|^4.0|^5.0|^6.0"
     },
     "repositories": [
         {
